<resources>
    <string name="app_name">lab2</string>
    <string name="action_settings">Settings</string>
    <string name="imports">import</string>
    <string name="gallery">gallery</string>
    <string name="slideshow">slideshow</string>
    <string name="tools">tools</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="form">Form</string>
    <string name="history">History</string>
    <string name="summary">Summary</string>
    <string name="logout">Logout</string>

    <string-array name="categories">
        <item>Encuesta</item>
        <item>Inspeccion</item>
        <item>Reporte</item>
    </string-array>
    <string name="category_prompt">Elija una Categoria</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="answer_form">Answer Form</string>

</resources>
